Fix #12799: Enable elf symbol patching for Haiku

Signed-off-by: Jérôme Duval <jerome.duval@gmail.com>