headers/tools/cppunit/TestShell.h
@@ -17,7 +17,11 @@ class BDirectory;
 class BLocker;
 class BPath;
 
+#ifndef NO_ELF_SYMBOL_PATCHING
+#include <tools/elfsymbolpatcher/ElfSymbolPatcher.h>
+#else
 class ElfSymbolPatchGroup;
+#endif
 
 // Defines SuiteFunction to be a pointer to a function that
 // takes no arguments and returns a pointer to a CppUnit::Test
